Added State, EmptyView and Snackbar extensions to easily use Snackbar when an error happens.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
   <string name="app_name">ShowMeTheMovies</string>
+  <string name="labelEmptyResult">Sorry, there are no results</string>
+  <string name="labelErrorResult">Oops! something went wrong</string>
+  <string name="buttonCheckAgain">Check again</string>
+  <string name="actionTryAgain">Try again</string>
 </resources>
